--- a/app/src/main/res/layout/activity_person_name_mvp.xml
+++ b/app/src/main/res/layout/activity_person_name_mvp.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="15dp"
-    tools:context=".MVP.view.PersonName">
+    tools:context=".MVP.view.PersonNameMVP">
 
     <android.support.design.widget.TextInputEditText
         android:layout_width="0dp"
