--- a/app/src/main/res/layout/snippet_circular_button.xml
+++ b/app/src/main/res/layout/snippet_circular_button.xml
@@ -4,165 +4,183 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <ImageView
+        android:id="@+id/img_centre"
+        android:layout_width="10dp"
+        android:layout_height="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="20dp"/>
+
     <Button
         android:id="@+id/btn_0"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
+        android:layout_width="@dimen/circle_width_height"
+        android:layout_height="@dimen/circle_width_height"
         android:background="@drawable/circle_background_dark_yellow"
         android:text="0"
         android:textAlignment="center"
         android:textColor="@color/white"
-        android:textSize="20dp"
+        android:textSize="@dimen/button_text_size"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintCircle="@+id/img_centre"
+        app:layout_constraintCircleAngle="270"
+        app:layout_constraintCircleRadius="@dimen/circle_radius"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/btn_1"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
+        android:layout_width="@dimen/circle_width_height"
+        android:layout_height="@dimen/circle_width_height"
         android:background="@drawable/circle_background_dark_yellow"
         android:text="1"
         android:textAlignment="center"
         android:textColor="@color/white"
-        android:textSize="20dp"
+        android:textSize="@dimen/button_text_size"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintCircle="@id/btn_0"
-        app:layout_constraintCircleAngle="20"
-        app:layout_constraintCircleRadius="50dp"
+        app:layout_constraintCircle="@+id/img_centre"
+        app:layout_constraintCircleAngle="288"
+        app:layout_constraintCircleRadius="@dimen/circle_radius"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/btn_2"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
+        android:layout_width="@dimen/circle_width_height"
+        android:layout_height="@dimen/circle_width_height"
         android:background="@drawable/circle_background_dark_yellow"
         android:text="2"
         android:textAlignment="center"
         android:textColor="@color/white"
-        android:textSize="20dp"
+        android:textSize="@dimen/button_text_size"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintCircle="@id/btn_0"
-        app:layout_constraintCircleAngle="25"
-        app:layout_constraintCircleRadius="100dp"
+        app:layout_constraintCircle="@+id/img_centre"
+        app:layout_constraintCircleAngle="306"
+        app:layout_constraintCircleRadius="@dimen/circle_radius"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/btn_3"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
+        android:layout_width="@dimen/circle_width_height"
+        android:layout_height="@dimen/circle_width_height"
         android:background="@drawable/circle_background_dark_yellow"
         android:text="3"
         android:textAlignment="center"
         android:textColor="@color/white"
-        android:textSize="20dp"
+        android:textSize="@dimen/button_text_size"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintCircle="@id/btn_0"
-        app:layout_constraintCircleAngle="30"
-        app:layout_constraintCircleRadius="150dp"
+        app:layout_constraintCircle="@+id/img_centre"
+        app:layout_constraintCircleAngle="324"
+        app:layout_constraintCircleRadius="@dimen/circle_radius"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/btn_4"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
+        android:layout_width="@dimen/circle_width_height"
+        android:layout_height="@dimen/circle_width_height"
         android:background="@drawable/circle_background_dark_yellow"
         android:text="4"
         android:textAlignment="center"
         android:textColor="@color/white"
-        android:textSize="20dp"
+        android:textSize="@dimen/button_text_size"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintCircle="@id/btn_0"
-        app:layout_constraintCircleAngle="35"
-        app:layout_constraintCircleRadius="200dp"
+        app:layout_constraintCircle="@id/img_centre"
+        app:layout_constraintCircleAngle="342"
+        app:layout_constraintCircleRadius="@dimen/circle_radius"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/btn_5"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
+        android:layout_width="@dimen/circle_width_height"
+        android:layout_height="@dimen/circle_width_height"
         android:background="@drawable/circle_background_dark_yellow"
         android:text="5"
         android:textAlignment="center"
         android:textColor="@color/white"
-        android:textSize="20dp"
+        android:textSize="@dimen/button_text_size"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintCircle="@id/btn_1"
-        app:layout_constraintCircleAngle="50"
-        app:layout_constraintCircleRadius="200dp"
+        app:layout_constraintCircle="@id/img_centre"
+        app:layout_constraintCircleAngle="0"
+        app:layout_constraintCircleRadius="@dimen/circle_radius"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/btn_6"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
+        android:layout_width="@dimen/circle_width_height"
+        android:layout_height="@dimen/circle_width_height"
         android:layout_marginStart="216dp"
         android:layout_marginBottom="176dp"
         android:background="@drawable/circle_background_dark_yellow"
         android:text="6"
         android:textAlignment="center"
         android:textColor="@color/white"
-        android:textSize="20dp"
+        android:textSize="@dimen/button_text_size"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintCircle="@id/btn_5"
-        app:layout_constraintCircleAngle="110"
-        app:layout_constraintCircleRadius="50dp"
+        app:layout_constraintCircle="@id/img_centre"
+        app:layout_constraintCircleAngle="18"
+        app:layout_constraintCircleRadius="@dimen/circle_radius"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/btn_7"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
+        android:layout_width="@dimen/circle_width_height"
+        android:layout_height="@dimen/circle_width_height"
         android:background="@drawable/circle_background_dark_yellow"
         android:text="7"
         android:textAlignment="center"
         android:textColor="@color/white"
-        android:textSize="20dp"
+        android:textSize="@dimen/button_text_size"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintCircle="@id/btn_5"
-        app:layout_constraintCircleAngle="120"
-        app:layout_constraintCircleRadius="100dp"
+        app:layout_constraintCircle="@id/img_centre"
+        app:layout_constraintCircleAngle="36"
+        app:layout_constraintCircleRadius="@dimen/circle_radius"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/btn_8"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
+        android:layout_width="@dimen/circle_width_height"
+        android:layout_height="@dimen/circle_width_height"
         android:background="@drawable/circle_background_dark_yellow"
         android:text="8"
         android:textAlignment="center"
         android:textColor="@color/white"
-        android:textSize="20dp"
+        android:textSize="@dimen/button_text_size"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintCircle="@id/btn_10"
-        app:layout_constraintCircleAngle="330"
-        app:layout_constraintCircleRadius="100dp"
+        app:layout_constraintCircle="@id/img_centre"
+        app:layout_constraintCircleAngle="54"
+        app:layout_constraintCircleRadius="@dimen/circle_radius"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/btn_9"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
+        android:layout_width="@dimen/circle_width_height"
+        android:layout_height="@dimen/circle_width_height"
         android:background="@drawable/circle_background_dark_yellow"
         android:text="9"
         android:textAlignment="center"
         android:textColor="@color/white"
-        android:textSize="20dp"
+        android:textSize="@dimen/button_text_size"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintCircle="@id/btn_10"
-        app:layout_constraintCircleAngle="340"
-        app:layout_constraintCircleRadius="50dp"
+        app:layout_constraintCircle="@id/img_centre"
+        app:layout_constraintCircleAngle="72"
+        app:layout_constraintCircleRadius="@dimen/circle_radius"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/btn_10"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
+        android:layout_width="@dimen/circle_width_height"
+        android:layout_height="@dimen/circle_width_height"
         android:background="@drawable/circle_background_dark_yellow"
         android:text="10"
         android:textAlignment="center"
         android:textColor="@color/white"
-        android:textSize="20dp"
+        android:textSize="@dimen/button_text_size"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintCircle="@id/img_centre"
+        app:layout_constraintCircleAngle="90"
+        app:layout_constraintCircleRadius="@dimen/circle_radius"
+        app:layout_constraintEnd_toEndOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
